Fix alignment issue of default query editor text

--- a/etc/css/style.css
+++ b/etc/css/style.css
@@ -698,7 +698,6 @@ div.query-default-text {
   font-weight: 400;
   color: #DDE0E6;
   opacity: 0.5;
-  margin-left: -7px;
   cursor: pointer;
 }
 
